# Knowlify

./: README.md  error_handler.py  qa_agent_v2.py  qa_agent_v4.py  qa_agent_v5.py  system_prompt.txt  teacher_pass.py  teacher_pass_v2.py  timeline_layout_analyzer.py
Agentic Approach/: pyproject.toml
Agentic Approach/examples/: processing.ipynb  processing.py
Agentic Approach/examples/agent_workspace/animation_workspace/: scene.py
Agentic Approach/examples/agent_workspace/animation_workspace/media/Tex/: 2012272f9af473b8.tex  264e59b2e01513eb.tex  298dffc6ee1cae13.tex  434b271ea02e77f5.tex  adda34813e41ff7a.tex  b7b7b8027869e37d.tex  cebacdffd40f883c.tex  d79a2c3109ced6de.tex  e93c5539c1639672.tex  f986a17560c72c18.tex
Agentic Approach/examples/agent_workspace/animation_workspace/media/videos/scene/480p15/: ContextRotScene.srt
Agentic Approach/examples/agent_workspace/animation_workspace/media/videos/scene/480p15/partial_movie_files/ContextRotScene/: partial_movie_file_list.txt
Agentic Approach/examples/agent_workspace/animation_workspace/media/voiceovers/: cache.json
Agentic Approach/examples/cached_outputs/: recursive_language_models_storyboard_0.pkl  recursive_language_models_storyboard_1.pkl  recursive_language_models_storyboard_2.pkl  recursive_language_models_storyboard_3.pkl  recursive_language_models_storyboard_4.pkl  rlm_breakdown.pkl
Agentic Approach/src/eduly/: client.py
Agentic Approach/src/eduly/prompts/: animate.py  storyboard.py
AgenticApproach/: pyproject.toml
KB Approach/: checker.py  error_handler.py  qa_agent_v5.py  (+1 more)
(+1741 files in other folders)
