[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eduly"
version = "0.1.0"
description = "Educational video generator"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.1",
    "google-genai>=1.56.0",
    "ipykernel>=7.1.0",
    "langchain-google-genai>=4.1.2",
    "manim==0.19.1",
    "pydantic>=2.0.0",
    "tqdm>=4.67.1",
    "kokoro-manim-voiceover",
]

[tool.hatch.build.targets.wheel]
packages = ["src/eduly"]